--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,13 @@
 name: Compile Latex and Release PDF  
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+  statuses: write
+  packages: write
+  deployments: write
+
 on:
   push:
     tags:
